--- a/GdseDemo/package.json
+++ b/GdseDemo/package.json
@@ -13,6 +13,8 @@
     "native-base": "^3.4.17",
     "react": "18.0.0",
     "react-native": "0.69.5",
+    "react-native-date-picker": "^4.2.5",
+    "react-native-paper": "^5.0.0-rc.6",
     "react-native-safe-area-context": "^3.3.2",
     "react-native-svg": "^12.1.1"
   },
