--- a/GdseDemo/package.json
+++ b/GdseDemo/package.json
@@ -20,6 +20,7 @@
     "react-native-date-picker": "^4.2.5",
     "react-native-elements": "^3.4.2",
     "react-native-gesture-handler": "^2.7.0",
+    "react-native-image-picker": "^4.10.0",
     "react-native-paper": "^5.0.0-rc.6",
     "react-native-safe-area-context": "^3.4.1",
     "react-native-screens": "^3.18.0",
